	getUIntegerReturn, getShortReturn, getUShortReturn, getLongReturn,
	getULongReturn, getCharReturn, getUCharReturn, getStringReturn, 
	getFloatReturn, getDoubleReturn): Add support for libffi and avcall for
	when __builtin_apply is buggy.
	(getPointerReturn): Return void * instead of unsigned.
	(tclObjc_msgSendToClientData): Use %p instead of %x for pointer,
	per POINTER_FMT_HEX_PREFIX.

	* Makefile.am (FFIINCLUDES): New substituted variable.
	(INCLUDES): Add FFIINCLUDES.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am: Add SUFFIXES = .m since we aren't including 
	Makefile.rules.  (tclobjc_HEADERS): Add tclObjc.h.

	* tclObjc.m: Include swarmconfig.h instead of config.h.

	* List.m: Include stdlib.h.

	* TclInterp.m: Include string.h.

	* TkInterp.m: Include unistd.h.

	* tclObjc.m: Include stdlib.h and string.h.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.h: Renamed from tclObjc.h.in; no longer an extracted file.
	(TCLOBJC_VERSION): Bump to 1.4.

	* tclObjc.m: Include config.h.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.m (ATDELIMCHAR): Switch back to `@', until BLT 2.4 is
	for real.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in (INCPLACES, LIBPLACES): Add /Cygnus/B19/{include,lib}.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.m (ATDELIMCHAR): New macro.  Used in 
	tclObjc_objectToName and tclObjcToObject as delimiter between
	name and address.  Also used in TclObjc_Init.

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.in: Bump TCLOBJC_VERSION to 1.4.

	* configure.in (TCLLIBNAME): Update for Tcl/Tk 8.1.

1998-06-30  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* TkInterp.m ([TkInterp -initWithArgc:argv:]): Put "update"
	in writable buffer before handing it to Tcl_Eval.

	* TclInterp.m ([TclInterp -preInitWithArgc:argv:]): Move buffer
	to where it is used for setting argc.
